Fix overflow issue on the Typeahead.

--- a/src/components/core/Form/Form.sass
+++ b/src/components/core/Form/Form.sass
@@ -1,10 +1,5 @@
 .container
   .field
-    animation-name: fade-in
-    animation-duration: 300ms
-    animation-direction: normal
-    animation-fill-mode: forwards
-    animation-timing-function: ease-in-out
     margin: 25px 0
     label, input
       display: block
@@ -19,9 +14,3 @@
       width: 100%
       max-width: 150px
       padding: 15px
-
-@keyframes fade-in
-  from
-    opacity: 0.5
-  to
-    opacity: 1
