--- a/src/components/core/Typeahead/Typeahead.sass
+++ b/src/components/core/Typeahead/Typeahead.sass
@@ -9,6 +9,7 @@
   border-radius: 0 0 2px 2px
   overflow: hidden
   width: 100%
+  z-index: 1
 
 .option
   padding: 1em
